[tool.poetry]
name = "timetp"
version = "0.1.0"
description = ""
authors = ["mahdihaghverdi <mahdihaghverdiliewpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
